--- a/_posts/2016-04-01-map-in-md.md
+++ b/_posts/2016-04-01-map-in-md.md
@@ -29,8 +29,7 @@ title: just begin
 
     </div>
 
-    {{#markdown}}
-```js
+<script>
 
    require([
             "esri/map",
@@ -108,6 +107,4 @@ title: just begin
             }
         });
 
-
-        ```
-{{/markdown}}
+</script>
